y scrollbar fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,7 @@ body {
     padding-top: 70px;
     background: #f2b035;
     font-family: 'Roboto', sans-serif;
+    overflow-y:scroll;
 }
 
 section.centered {
